# pySDA

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  config.example.yaml  debug_apikey_page.html  pyproject.toml  response_text.txt
debug_info/: debug_confirmations_page_market_listing.txt  debug_confirmations_page_purchase.txt  debug_confirmations_page_trade_offer.txt
src/: cli_interface.py  cookie_manager.py  factories.py  models.py  password_changer.py  proxy_manager.py  trade_confirmation_manager.py
src/cli/: __init__.py  account_context.py  auto_manager.py  config_manager.py  constants.py  cookie_checker.py  display_formatter.py  market_handler.py  menu_base.py  menus.py  multi_account_auto_manager.py  password_changer.py  password_manager.py  password_manager_old.py  settings_manager.py  trade_handlers.py
src/interfaces/: __init__.py  notification_interface.py  proxy_provider.py  storage_interface.py
src/steampy/: __main__.py  account_manager.py  client.py  config.py  confirmation.py  exceptions.py  file_config.py  guard.py  login.py  market.py  models.py  refresh_token.md  session_manager.py  utils.py
src/utils/: compare_sessions.py  confirmation_utils.py  cookies_and_session.py  delayed_http_adapter.py  ip_utils.py  logger_setup.py
test/: test_client.py
tests/: demo_error_tracking.py  force_refresh_session.py  test_cookies_debug.py  test_error_tracking.py  test_login_and_refresh_only.py  test_proxy_connection.py  test_real_refresh_token_login.py  test_refresh_token_force.py  test_trade_offer.py
tests_steampy/: test_market.py
(+15 files in other folders)
